--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "storybook",
-	"version": "0.1.0",
+	"name": "my-webpack-project",
+	"version": "1.0.0",
 	"private": true,
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.1",
@@ -16,17 +16,19 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
-		"sass": "^1.57.1",
-		"typescript": "^4.9.4",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "webpack --mode=production --node-env=production",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"sb": "start-storybook -p 6006 -s public",
-		"build-storybook": "build-storybook -s public"
+		"build-storybook": "build-storybook -s public",
+		"build:dev": "webpack --mode=development",
+		"build:prod": "webpack --mode=production --node-env=production",
+		"watch": "webpack --watch",
+		"serve": "webpack serve"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -67,8 +69,23 @@
 		"@storybook/preset-create-react-app": "^4.1.2",
 		"@storybook/react": "^6.5.15",
 		"@storybook/testing-library": "^0.0.13",
+		"@webpack-cli/generators": "^3.0.1",
+		"autoprefixer": "^10.4.13",
 		"babel-plugin-named-exports-order": "^0.0.2",
+		"css-loader": "^6.7.3",
+		"html-webpack-plugin": "^5.5.0",
+		"mini-css-extract-plugin": "^2.7.2",
+		"postcss": "^8.4.21",
+		"postcss-loader": "^7.0.2",
 		"prop-types": "^15.8.1",
-		"webpack": "^5.75.0"
-	}
+		"sass": "^1.57.1",
+		"sass-loader": "^13.2.0",
+		"style-loader": "^3.3.1",
+		"ts-loader": "^9.4.2",
+		"typescript": "^4.9.4",
+		"webpack": "^5.75.0",
+		"webpack-cli": "^5.0.1",
+		"webpack-dev-server": "^4.11.1"
+	},
+	"description": "My webpack project"
 }
