--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"zod": "^3.20.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
