--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.11",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
 		"classnames": "^2.3.2",
+		"jest": "^27.5.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
@@ -70,6 +70,7 @@
 		"@storybook/preset-create-react-app": "^4.1.2",
 		"@storybook/react": "^6.5.15",
 		"@storybook/testing-library": "^0.0.13",
+		"@testing-library/react": "^13.4.0",
 		"@webpack-cli/generators": "^3.0.1",
 		"autoprefixer": "^10.4.13",
 		"babel-plugin-named-exports-order": "^0.0.2",
